--- a/neighborhood-watch/popup.html
+++ b/neighborhood-watch/popup.html
@@ -7,11 +7,14 @@
 	body {
             margin: 25px;
             border-radius: 20px;
+            padding-left: 40px;
+            padding-right: 40px;
         }
 	h1 {
 	    font-size: 15px;
 	    text-align: center;
         font-weight: bold;
+        white-space: nowrap;
         }
     h2 {
         font-size: 10px;
@@ -19,12 +22,20 @@
         /* font-weight: ; */
         }
     button {
-        margin: 20px;
+        margin: 10px;
+        padding: 10px;
+        padding-left: 15px;
+        padding-right: 15px;
+        align-items: center;
+        justify-content: center;
+        margin-left: 40px;
+
     }
     </style>
     <body>
-        <h1>Tag a Dark Pattern.</h1>
-        <button id="clickIt">"I'm ready to tag a Dark Pattern for the Common Good!"</button>        
+        <h1>Tag a Dark Pattern!</h1>
+        <!-- <button id="clickIt">"I'm ready to tag a Dark Pattern for the Common Good!"</button>         -->
+        <button id="clickIt">Tag</button>        
     </body>
     <script src="scripts/popup.js"></script>
 </html>
