--- a/neighborhood-watch/popup.html
+++ b/neighborhood-watch/popup.html
@@ -34,6 +34,9 @@
     </style>
     <body>
         <h1>Tag a Dark Pattern!</h1>
+        <p>Dark patterns are manipulative tactics used on different websites.</p>
+        <p>Neighborhood Watch outlines them for you in orange, and also lets you tag them yourself.</p>
+        <a href="https://webtransparency.cs.princeton.edu/dark-patterns/#heading">Click here for more info.</a>
         <button id="clickIt">Tag</button>        
     </body>
     <script src="scripts/popup.js"></script>
