--- a/neighborhood-watch/popup.html
+++ b/neighborhood-watch/popup.html
@@ -35,7 +35,7 @@
     <body>
         <h1>Tag a Dark Pattern!</h1>
         <p>Dark patterns are manipulative tactics used by websites.</p>
-        <p>Neighborhood Watch highlights them for you and allows you to tag them yourself.</p>
+        <p style="border:5px solid red">Neighborhood Watch highlights them for you and allows you to tag them yourself.</p>
         <a href="https://webtransparency.cs.princeton.edu/dark-patterns/#heading">Click here for more info.</a>
         <button id="clickIt">Tag</button>        
     </body>
